# projeto_final

./: README.md  pyproject.toml  requirements.txt  ruff.toml
data/: Mapeamento de perguntas chatbot.xlsx  Mapeamento_Perguntas_Whasapp_v2.xlsx  Perguntas_chatbot - 09.10_relacao FAQ perguntas users.xlsx  Perguntas_chatbot - 09.10_v4.xlsx  Perguntas_chatbot_V2.xlsx  Perguntas_chatbot_clean - 09.10_relacao FAQ perguntas users.xlsx  Respostas LLM Para Perguntas Wpp - relacao.csv  mapeamento_de_perguntas_chatbot.xlsx  perguntas_chatbot_v1.xlsx
sandbox/: initial_fuzze.ipynb  input.json  main.py  output_QRatio.json  output_WRatio.json  output_partial_ratio.json  output_partial_token_set_ratio.json  output_partial_token_sort_ratio.json  output_ratio.json  output_token_ratio.json  output_token_set_ratio.json  output_token_sort_ratio.json  tests.ipynb
sandbox/similarity_methods/: input.json  output.csv  simulation.py
src/: main.py  utils.py
src/anotacao/: anotacao_output.csv  main.py  scores.csv
src/anotacao/ensemble/: anotacao_ensemble_output.csv  main.py  scores_ensemble.csv
src/anotacao/top_n_similarity/: main.py  metohds_results.csv  scores.csv
src/bert_score/: bert_scores.csv  bert_scores_evaluation.csv  main.py
src/bert_score/top_n_similarity/: main.py  methods_results_bert.csv  methods_scores_bert.csv
src/llm/autogen/: chat.py  llm_config.py  llm_results.csv  llm_scores.csv  main.py  test.py
src/llm/langchain/: llm_config.py  main.py
src/llm/llama_index/: llm_config.py  main.py  multi_document_agent.py  output.txt  single_document_agent.py
src/llm/llama_index/evaluation/: evaluation.csv  main.py
src/results/: confusion_matrix.py  confusion_matrix_full.py
user_questions/: main.py  output.csv  utils.py
user_questions/anotacao/: anotacao_output.csv  main.py  methods_score.py  scores.csv
user_questions/bert_score/: main.py
