[project]
name = "projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat[bedrock]~=0.2",
    "bert-score==0.3.13",
    "json5>=0.10.0",
    "llama-index-core>=0.12.16.post1",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-bedrock>=0.3.3",
    "llama-index-llms-deepseek>=0.1.1",
    "llama-index-llms-llama-api>=0.3.0",
    "llama-index-llms-openai>=0.3.18",
    "llama-index-llms-openai-like>=0.3.3",
    "llama-index-program-openai>=0.3.1",
    "llama-index-readers-file>=0.4.4",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "openai>=1.58.1",
    "openpyxl==3.1.0",
    "pandas==2.2.0",
    "pip>=25.0.1",
    "python-dateutil==2.9.0",
    "pytz==2024.1.0",
    "rapidfuzz==3.9.0",
    "ruff>=0.8.4",
    "six==1.16.0",
    "tzdata==2024.1.0",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C4",     # Helps you write better list/set/dict comprehensions.
    "E",      # pycodestyle errors
    "FA",     # Verifies files use from __future__ import annotations if a type is used in the module that can be rewritten using PEP 563.
    "F",      # pyflakes
    "G",      # Better usage of built-in logging
    "I",      # isort - Import sorting
    "LOG",    # Checks for issues using the standard library logging module.
    "PLC",    # pycodestyle conventions
    "PYI",    # Linting rules for type annotations.
    "Q",      # Linting rules for quites
    "RUF100", # Unused noqa directive
    "TCH",    # Move type only imports to type-checking condition.
    "TID",    # Helps you write tidier imports.
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "SIM",    # flake8-simplify
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
